--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,7 +19,8 @@
     "drizzle-orm": "^0.33.0",
     "hono": "^4.6.5",
     "mysql2": "^3.11.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "jose": "^5.9.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
