feat(api-spec): TypeSpec を修正し OpenAPI を生成\n\n- @service と @server 構文修正\n- 標準 BearerAuth を使用\n- openapi.yaml を生成\n\nfeat(api-types): OpenAPI から型生成パッケージを追加\n\n- packages/api-types を追加\n- openapi-typescript で src/index.ts を生成するスクリプト\n- ルート build スクリプトに types 生成を組み込み

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - '5173:5173'
     volumes:
       - ./apps/web:/app/apps/web
+      - ./packages:/app/packages
       - /app/apps/web/node_modules
 volumes:
   db-data:
