feat(api-types): OpenAPI からの型生成を CLI に切替し、正しい TS を出力\n\n- scripts/generate.ts は不要化（残置可）\n- openapi-typescript の -y オプションで対話なし生成\n- src/index.ts を各パッケージから参照可能に

--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -8,7 +8,7 @@
     "src"
   ],
   "scripts": {
-    "build": "tsx scripts/generate.ts",
+    "build": "openapi-typescript ../api-spec/tsp-output/@typespec/openapi3/openapi.yaml -o src/index.ts -y",
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
