feat(server): OpenAPI 生成型を取り込み\n\n- presenter レスポンスを生成型に準拠\n- auth controller 返却型に注釈を追加\n- docker-compose と server Dockerfile を調整し packages をマウント

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -10,6 +10,8 @@ WORKDIR /app
 # Copy workspace files for pnpm to resolve
 COPY package.json pnpm-workspace.yaml turbo.json ./
 COPY apps/server/package.json apps/server/
+# Add workspace package manifests needed by server
+COPY packages/api-types/package.json packages/api-types/
 
 RUN pnpm install --filter server...
 
