fix(web): copy workspace manifests (api-types) before install & move source copy before pnpm install

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -7,12 +7,15 @@ RUN corepack enable && corepack prepare pnpm@9.6.0 --activate
 
 WORKDIR /app
 
+# ルートのワークスペース定義と web パッケージの package.json
 COPY package.json pnpm-workspace.yaml ./
 COPY apps/web/package.json apps/web/
+# web が依存する workspace パッケージの manifest を追加
+COPY packages/api-types/package.json packages/api-types/
+# ソースを先にコピーしてから install（node_modules との競合を避ける）
+COPY apps/web apps/web
 
 RUN pnpm install --filter web...
-
-COPY apps/web apps/web
 
 WORKDIR /app/apps/web
 EXPOSE 5173
